--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
 
 	<meta charset="utf-8">
 	<title>test-500na700</title>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" href="css/normalize.min.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -24,7 +24,7 @@
 			<i class="icon-logo"></i>
 
 			<label for="burger-checkbox" class="page__mask"></label>
-			<label for="burger-checkbox" class="burger" type="button" id="sidebarToggle">
+			<label for="burger-checkbox" class="burger" id="sidebarToggle">
 				<span class="burger__item burger__item_top"></span>
 				<span class="burger__item burger__item_center"></span>
 				<span class="burger__item burger__item_bottom"></span>
@@ -118,7 +118,7 @@
 				<div class="accordion__tab">
 					<input type="radio" name="acc" id="acc1">
 					<label for="acc1">
-						<h2 class="accordion__tab-title">Как добраться до музея?</h2>
+						<p class="accordion__tab-title">Как добраться до музея?</p>
 					</label>
 					<div class="accordion__tab-content">
 						<p>В Национальный музей Республики Татарстан можно добраться общественным транспортом: <br> 1) «Станция метро «Кремлевская», а затем по направлению к Кремлю пройдя 5 минут пешком;</p>
@@ -128,7 +128,7 @@
 				<div class="accordion__tab">
 					<input type="radio" name="acc" id="acc2">
 					<label for="acc2">
-						<h2 class="accordion__tab-title">Есть ли поблизости удобная парковка?</h2>
+						<p class="accordion__tab-title">Есть ли поблизости удобная парковка?</p>
 					</label>
 					<div class="accordion__tab-content">
 						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Lorem семь но правилами рекламных, буквенных, обеспечивает рыбного безорфографичный снова речью предложения путь коварный залетают строчка текстами ему раз! Заголовок вдали собрал, от всех послушавшись пор лучше lorem продолжил. На берегу языком, запятой даже свою однажды ручеек пор маленькая? Ему но свою мир? Безорфографичный путь эта вопрос.</p>
@@ -138,7 +138,7 @@
 				<div class="accordion__tab">
 					<input type="radio" name="acc" id="acc3">
 					<label for="acc3">
-						<h2 class="accordion__tab-title">Можно ли воспользоваться аудиогидом?</h2>
+						<p class="accordion__tab-title">Можно ли воспользоваться аудиогидом?</p>
 					</label>
 					<div class="accordion__tab-content">
 						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Продолжил взобравшись его не своего взгляд первую коварных великий языком жизни, деревни злых все дорогу.</p>
