--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
 			<div class="accordion">
 				<div class="accordion__tab">
 					<input type="radio" name="acc" id="acc1">
-					<label for="acc1">
-						<p class="accordion__tab-title">Как добраться до музея?</p>
-					</label>
+					<label class="accordion__tab-title" for="acc1">Как добраться до музея?</label>
 					<div class="accordion__tab-content">
 						<p>В Национальный музей Республики Татарстан можно добраться общественным транспортом: <br> 1) «Станция метро «Кремлевская», а затем по направлению к Кремлю пройдя 5 минут пешком;</p>
 					</div>
@@ -127,9 +125,7 @@
 
 				<div class="accordion__tab">
 					<input type="radio" name="acc" id="acc2">
-					<label for="acc2">
-						<p class="accordion__tab-title">Есть ли поблизости удобная парковка?</p>
-					</label>
+					<label class="accordion__tab-title" for="acc2">Есть ли поблизости удобная парковка?</label>
 					<div class="accordion__tab-content">
 						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Lorem семь но правилами рекламных, буквенных, обеспечивает рыбного безорфографичный снова речью предложения путь коварный залетают строчка текстами ему раз! Заголовок вдали собрал, от всех послушавшись пор лучше lorem продолжил. На берегу языком, запятой даже свою однажды ручеек пор маленькая? Ему но свою мир? Безорфографичный путь эта вопрос.</p>
 					</div>
@@ -137,9 +133,7 @@
 
 				<div class="accordion__tab">
 					<input type="radio" name="acc" id="acc3">
-					<label for="acc3">
-						<p class="accordion__tab-title">Можно ли воспользоваться аудиогидом?</p>
-					</label>
+					<label class="accordion__tab-title" for="acc3">Можно ли воспользоваться аудиогидом?</label>
 					<div class="accordion__tab-content">
 						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Продолжил взобравшись его не своего взгляд первую коварных великий языком жизни, деревни злых все дорогу.</p>
 					</div>
