--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/normalize.min.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="fonts/icomoon/style.css"><!-- иконочный шрифт, из иконок в макете -->
+	<!-- <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500&display=swap" rel="stylesheet"> -->
 	<link rel="stylesheet" href="css/main.css">
 	<!-- <link rel="stylesheet" href="css/media.css"> -->
 
@@ -30,63 +31,70 @@
 				<span class="burger__item burger__item_bottom"></span>
 			</label>
 
-			<div class="nav-menu" id="menu">
-				<div class="nav-menu__item active">
+			<ul class="nav-menu" id="menu">
+				<li class="nav-menu__item active">
 					<input type="radio" name="mn" id="mn1">
 					<label for="mn1"><a href="#" class="nav-menu__link ">Пункт 1</a></label>
-					<div class="sub-menu">
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-					</div>	<!-- /sub-menu -->
-				</div>
-				<div class="nav-menu__item">
+					<ul class="sub-menu">
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+					</ul>	<!-- /sub-menu -->
+				</li>	<!-- /nav-menu__item -->
+				<li class="nav-menu__item">
 					<input type="radio" name="mn" id="mn2">
 					<label for="mn2"><a href="#" class="nav-menu__link ">Пункт 2</a></label>
-					<div class="sub-menu">
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-					</div>	<!-- /sub-menu -->
-				</div>
-				<div class="nav-menu__item">
+					<ul class="sub-menu">
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+					</ul>	<!-- /sub-menu -->
+				</li>	<!-- /nav-menu__item -->
+				<li class="nav-menu__item">
 					<input type="radio" name="mn" id="mn3">
 					<label for="mn3"><a href="#" class="nav-menu__link ">Пункт 3</a></label>
-					<div class="sub-menu">
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-					</div>	<!-- /sub-menu -->
-				</div>
-				<div class="nav-menu__item">
+					<ul class="sub-menu">
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+					</ul>	<!-- /sub-menu -->
+				</li>	<!-- /nav-menu__item -->
+				<li class="nav-menu__item">
 					<input type="radio" name="mn" id="mn4">
 					<label for="mn4"><a href="#" class="nav-menu__link ">Пункт 4</a></label>
-					<div class="sub-menu">
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-					</div>	<!-- /sub-menu -->
-				</div>
-				<div class="nav-menu__item">
+					<ul class="sub-menu">
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+					</ul>	<!-- /sub-menu -->
+				</li>	<!-- /nav-menu__item -->
+				<li class="nav-menu__item">
 					<input type="radio" name="mn" id="mn5">
 					<label for="mn5"><a href="#" class="nav-menu__link ">Пункт 5</a></label>
-					<div class="sub-menu">
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-						<div class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></div>
-					</div>	<!-- /sub-menu -->
-				</div>
-			</div>	<!-- /nav-menu -->
+					<ul class="sub-menu">
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+						<li class="sub-menu__item"><a href="#" class="sub-menu__link">Подпункт меню</a></li>
+					</ul>	<!-- /sub-menu -->
+				</li>	<!-- /nav-menu__item -->
+
+
+
+
+
+
+				
+			</ul>	<!-- /nav-menu -->
 		</nav>
 		<div class="sub-mask" id="sub-mask"></div>
 	</header>
